--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   google_sign_in: ^5.0.4
   flutter_neumorphic_plus: ^3.3.0
   vibration: ^1.8.4
   audioplayers: ^5.2.1
   flutter_launcher_icons: "^0.13.1"
+  swiping_card_deck: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +62,33 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  # assets:
+  #   - assets/Learn/A.png
+  #   - assets/Learn/B.png
+  #   - assets/Learn/C.png
+  #   - assets/Learn/D.png
+  #   - assets/Learn/E.png
+  #   - assets/Learn/F.png
+  #   - assets/Learn/G.png
+  #   - assets/Learn/H.png
+  #   - assets/Learn/I.png
+  #   - assets/Learn/J.png
+  #   - assets/Learn/K.png
+  #   - assets/Learn/L.png
+  #   - assets/Learn/M.png
+  #   - assets/Learn/N.png
+  #   - assets/Learn/O.png
+  #   - assets/Learn/P.png
+  #   - assets/Learn/Q.png
+  #   - assets/Learn/R.png
+  #   - assets/Learn/S.png
+  #   - assets/Learn/T.png
+  #   - assets/Learn/U.png
+  #   - assets/Learn/V.png
+  #   - assets/Learn/W.png
+  #   - assets/Learn/X.png
+  #   - assets/Learn/Y.png
+  #   - assets/Learn/Z.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
