--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   audioplayers: ^5.2.1
   flutter_launcher_icons: "^0.13.1"
   swiping_card_deck: ^1.3.0
-
+  sqflite: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -62,9 +62,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  # assets:
-  #   - assets/Learn/A.png
-  #   - assets/Learn/B.png
+  assets:
+    - lib/assets/Learn/
+
   #   - assets/Learn/C.png
   #   - assets/Learn/D.png
   #   - assets/Learn/E.png
