--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shimmer: ^3.0.0
 
   google_sign_in: ^5.0.4
   flutter_neumorphic_plus: ^3.3.0
